# crew_blog_app

./: .gitignore  README.md  pyproject.toml
db/: chroma.sqlite3
resources/draft/: content_calendar_mern_stack_20250909_193104.md  content_reviewer_mern_stack_20250909_193104.md  content_reviewer_neural_networks_20250909_084511.md  path_planner_mern_stack_20250909_193104.md  path_planner_neural_networks_20250909_084511.md  research_consultant_mern_stack_20250909_193104.md  research_consultant_neural_networks_20250909_084511.md
src/crew_blog_app/: app.py  crew.py  main.py
src/crew_blog_app/config/: agents.yaml  tasks.yaml
