[project]
name = "crew_blog_app"
version = "0.1.0"
description = "crew_blog_app using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.1",
]

[project.scripts]
crew_blog_app = "crew_blog_app.main:run"
run_crew = "crew_blog_app.main:run"
train = "crew_blog_app.main:train"
replay = "crew_blog_app.main:replay"
test = "crew_blog_app.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"


[tool.hatch.build.targets.wheel]
packages = ["src/crew_blog_app"]

[tool.hatch.build]
include = ["src/crew_blog_app/**/*"]